fixed tab scroll jump issue

--- a/BikeWale.UI/sass/compare/_details-style.sass
+++ b/BikeWale.UI/sass/compare/_details-style.sass
@@ -43,6 +43,7 @@ h1,
 // model-accordion-tab
 .model-accordion-tab
 	padding: 18px 20px
+	background: #f9f9f9
 	border-top: 1px solid $border-light
 	border-bottom: 1px solid $border-light
 
